# ranshaw

./: .gitignore  CHANGE_CURVES.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
common/: CMakeLists.txt  README.md
common/include/: load_3.h  load_4.h  ranshaw_ct_barrier.h  ranshaw_platform.h  ranshaw_secure_erase.h
common/include/x64/: mul128.h
common/src/: ranshaw_secure_erase.cpp
ec-divisors/: CMakeLists.txt  README.md
ec-divisors/include/: divisor.h  divisor_eval.h  divisor_eval_internal.h  poly.h
ec-divisors/src/: divisor.cpp  divisor_eval.cpp  poly.cpp
ec-divisors/src/x64/avx2/: divisor_eval_avx2.cpp
ec-divisors/src/x64/ifma/: divisor_eval_ifma.cpp
ecfft/: CMakeLists.txt  README.md
ecfft/include/: ecfft_fp.h  ecfft_fq.h
ecfft/src/: ecfft.cpp
fp/: CMakeLists.txt  README.md
fp/include/: fp.h  fp_batch_invert.h  fp_cmov.h  fp_cneg.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_ops.h  fp_pow22523.h  fp_sq.h  fp_sqrt.h  fp_tobytes.h  fp_utils.h
fp/include/portable/: fp25.h  fp25_chain.h  fp25_inline.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_pow22523.h  fp_sq.h  fp_sq2.h  fp_sqn.h  fp_sqrt.h  fp_tobytes.h
fp/include/x64/: fp51.h  fp51_chain.h  fp51_inline.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_pow22523.h  fp_sq.h  fp_sq2.h  fp_sqn.h  fp_sqrt.h  fp_tobytes.h
fp/include/x64/avx2/: fp10_avx2.h  fp10x4_avx2.h
fp/src/portable/: fp_frombytes.cpp  fp_invert.cpp  fp_mul.cpp  fp_pow22523.cpp  fp_sq.cpp  fp_sq2.cpp  fp_sqn.cpp  fp_sqrt.cpp  fp_tobytes.cpp
fp/src/x64/: fp_frombytes.cpp  fp_invert.cpp  fp_mul.cpp  fp_pow22523.cpp  fp_sq.cpp  fp_sq2.cpp  fp_sqn.cpp  fp_sqrt.cpp  fp_tobytes.cpp
fq/: CMakeLists.txt  README.md
fq/include/: fq.h  fq_batch_invert.h  fq_cmov.h  fq_cneg.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_ops.h  fq_sq.h  fq_sqrt.h  fq_tobytes.h  fq_utils.h
fq/include/portable/: fq25.h  fq25_chain.h  fq25_inline.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_sq.h  fq_sq2.h  fq_sqn.h  fq_sqrt.h  fq_tobytes.h
fq/include/x64/: fq51.h  fq51_chain.h  fq51_inline.h  fq_divsteps.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_sq.h  fq_sq2.h  fq_sqn.h  fq_sqrt.h  fq_tobytes.h
fq/include/x64/avx2/: fq10_avx2.h  fq10x4_avx2.h
fq/src/portable/: fq_frombytes.cpp  fq_invert.cpp  fq_mul.cpp  fq_sq.cpp  fq_sq2.cpp  fq_sqn.cpp  fq_sqrt.cpp  fq_tobytes.cpp
fq/src/x64/: fq_frombytes.cpp  fq_invert.cpp  fq_mul.cpp  fq_sq.cpp  fq_sq2.cpp  fq_sqn.cpp  fq_sqrt.cpp  fq_tobytes.cpp
include/: ranshaw.h  ranshaw_benchmark.h  ranshaw_cpuid.h  ranshaw_dispatch.h  ranshaw_divisor.h  ranshaw_point.h  ranshaw_polynomial.h  ranshaw_primitives.h  ranshaw_scalar.h  ranshaw_test_vectors.h  ranshaw_wei25519.h
ran/: CMakeLists.txt  README.md
ran/include/: ran.h  ran_add.h  ran_batch_affine.h  ran_constants.h  ran_dbl.h  ran_frombytes.h  ran_g_table.inl  ran_madd.h  ran_map_to_curve.h  ran_msm_fixed.h  ran_msm_vartime.h  ran_ops.h  ran_pedersen.h  ran_precomp.h  ran_scalar.h  ran_scalarmult.h  ran_scalarmult_fixed.h  ran_scalarmult_vartime.h  ran_to_scalar.h  ran_tobytes.h  ran_validate.h
ran/include/portable/: ran_add.h  ran_dbl.h  ran_frombytes.h  ran_madd.h  ran_map_to_curve.h  ran_msm_vartime.h  ran_scalarmult.h  ran_scalarmult_vartime.h  ran_tobytes.h
ran/include/x64/: ran_add.h  ran_dbl.h  ran_madd.h  ran_map_to_curve.h  ran_msm_vartime.h
ran/include/x64/avx2/: ran_avx2.h
ran/include/x64/ifma/: fp51x8_ifma.h  ran_ifma.h
ran/src/portable/: ran_add.cpp  ran_dbl.cpp  ran_frombytes.cpp  ran_madd.cpp  ran_map_to_curve.cpp  ran_msm_vartime.cpp  ran_scalarmult.cpp  ran_scalarmult_vartime.cpp  ran_tobytes.cpp
ran/src/x64/: ran_add.cpp  ran_dbl.cpp  ran_frombytes.cpp  ran_madd.cpp  ran_map_to_curve.cpp  ran_msm_vartime.cpp  ran_scalarmult.cpp  ran_scalarmult_vartime.cpp  ran_tobytes.cpp
ran/src/x64/avx2/: ran_msm_vartime.cpp  ran_scalarmult.cpp  ran_scalarmult_vartime.cpp
ran/src/x64/ifma/: ran_msm_vartime.cpp  ran_scalarmult.cpp  ran_scalarmult_vartime.cpp
shaw/: CMakeLists.txt  README.md
shaw/include/: shaw.h  shaw_add.h  shaw_batch_affine.h  shaw_constants.h  shaw_dbl.h  shaw_frombytes.h  shaw_g_table.inl  shaw_madd.h  shaw_map_to_curve.h  shaw_msm_fixed.h  shaw_msm_vartime.h  shaw_ops.h  shaw_pedersen.h  shaw_precomp.h  shaw_scalar.h  shaw_scalarmult.h  shaw_scalarmult_fixed.h  shaw_scalarmult_vartime.h  shaw_to_scalar.h  shaw_tobytes.h  shaw_validate.h
shaw/include/portable/: shaw_add.h  shaw_dbl.h  shaw_frombytes.h  shaw_madd.h  shaw_map_to_curve.h  shaw_msm_vartime.h  shaw_scalarmult.h  shaw_scalarmult_vartime.h  shaw_tobytes.h
shaw/include/x64/: shaw_add.h  shaw_dbl.h  shaw_madd.h  shaw_map_to_curve.h  shaw_msm_vartime.h
shaw/include/x64/avx2/: shaw_avx2.h
shaw/include/x64/ifma/: fq51x8_ifma.h  shaw_ifma.h
shaw/src/portable/: shaw_add.cpp  shaw_dbl.cpp  shaw_frombytes.cpp  shaw_madd.cpp  shaw_map_to_curve.cpp  shaw_msm_vartime.cpp  shaw_scalarmult.cpp  shaw_scalarmult_vartime.cpp  shaw_tobytes.cpp
shaw/src/x64/: shaw_add.cpp  shaw_dbl.cpp  shaw_frombytes.cpp  shaw_madd.cpp  shaw_map_to_curve.cpp  shaw_msm_vartime.cpp  shaw_scalarmult.cpp  shaw_scalarmult_vartime.cpp  shaw_tobytes.cpp
shaw/src/x64/avx2/: shaw_msm_vartime.cpp  shaw_scalarmult.cpp  shaw_scalarmult_vartime.cpp
shaw/src/x64/ifma/: shaw_msm_vartime.cpp  shaw_scalarmult.cpp  shaw_scalarmult_vartime.cpp
src/: api_divisor.cpp  api_point.cpp  api_polynomial.cpp  api_scalar.cpp  benchmark.cpp  benchmark_contest.cpp  benchmark_fcmpp.cpp  cpuid.cpp  dispatch.cpp  tests.cpp  tests_fuzz.cpp
test_vectors/: ranshaw_test_vectors.json
tools/: compute_curve_constants.py  ecfft_params.sage  find_ecfft_curve.cpp  gen_ecfft_data.cpp  gen_g_tables.py  gen_test_vectors.cpp  json_to_header.py  test_vectors.sage  validate_test_vectors.py
